crates/reinhardt-pages/tests/ui/style/fail/qualified_type.rs
use reinhardt_pages::{style_def};

#[style_def]
static STYLES: crate::CardStyles = style! { .card { color: red; } };

fn main() {}
