crates/reinhardt-pages/tests/ui/style/fail/qualified_type.stderr
error: style_def requires one unqualified style type identifier
 --> tests/ui/style/fail/qualified_type.rs:4:16
  |
4 | static STYLES: crate::CardStyles = style! { .card { color: red; } };
  |                ^^^^^^^^^^^^^^^^^
